--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "hono": "^4.7.0",
     "mongoose": "^8.10.0"
