--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     "allowJs": true,
 
     // Bundler mode
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "noEmit": true,
 
     // Best practices
@@ -23,5 +23,11 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+
+      // Fix compatibility issues
+      "esModuleInterop": true,
+      "resolveJsonModule": true,
+      "types": ["node", "express"]
+
 }
